[tool.poetry]
name = "clockifyrate"
version = "0.1.0"
description = ""
authors = ["Ben Rog-Wilhelm <zorba-github@pavlovian.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
